--- a/MonsterData/MonsterApp.DataAccess/MonsterApp.DataAccess.csproj
+++ b/MonsterData/MonsterApp.DataAccess/MonsterApp.DataAccess.csproj
@@ -30,9 +30,20 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.2\lib\net45\EntityFramework.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.2\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -43,16 +54,67 @@
   <ItemGroup>
     <Compile Include="AdoData .cs" />
     <Compile Include="AdoDataInsert.cs" />
-    <Compile Include="Gender.cs" />
-    <Compile Include="MonsterType.cs" />
+    <Compile Include="AdoDataUpdate.cs" />
+    <Compile Include="EfData.cs" />
+    <Compile Include="Gender.cs">
+      <DependentUpon>MonsterModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Monster.cs">
+      <DependentUpon>MonsterModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="MonsterModel.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>MonsterModel.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="MonsterModel.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>MonsterModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="MonsterModel.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>MonsterModel.edmx</DependentUpon>
+    </Compile>
+    <Compile Include="MonsterType.cs">
+      <DependentUpon>MonsterModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Title.cs" />
+    <Compile Include="sysdiagram.cs">
+      <DependentUpon>MonsterModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Title.cs">
+      <DependentUpon>MonsterModel.tt</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config">
       <SubType>Designer</SubType>
     </None>
+    <EntityDeploy Include="MonsterModel.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>MonsterModel.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <None Include="MonsterModel.edmx.diagram">
+      <DependentUpon>MonsterModel.edmx</DependentUpon>
+    </None>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="MonsterModel.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>MonsterModel.edmx</DependentUpon>
+      <LastGenOutput>MonsterModel.Context.cs</LastGenOutput>
+    </Content>
+    <Content Include="MonsterModel.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>MonsterModel.edmx</DependentUpon>
+      <LastGenOutput>MonsterModel.cs</LastGenOutput>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
