--- a/MonsterData/Monster.Test/Monster.Test.csproj
+++ b/MonsterData/Monster.Test/Monster.Test.csproj
@@ -61,6 +61,7 @@
   <ItemGroup>
     <Compile Include="AdoDataInsertTests.cs" />
     <Compile Include="AdoDataTests.cs" />
+    <Compile Include="EfDataTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
