add data client

--- a/.gitignore
+++ b/.gitignore
@@ -280,3 +280,5 @@ __pycache__/
 build/
 /MonsterApp/MonsterApp.DataAccess/App.config
 /MonsterApp/MonsterApp.Tests/App.config
+/MonsterWeb/MonsterWeb.Client/Web.config
+/MonsterWeb/MonsterWeb.Logic/App.config
