--- a/MonsterApp/MonsterApp.DataClient/Web.config
+++ b/MonsterApp/MonsterApp.DataClient/Web.config
@@ -40,5 +40,7 @@
     <directoryBrowse enabled="true"/>
     <validation validateIntegratedModeConfiguration="false"/>
   </system.webServer>
-
+  <connectionStrings>
+    <add name="MonsterDBEntities" connectionString="metadata=res://*/MonsterModel.csdl|res://*/MonsterModel.ssdl|res://*/MonsterModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=sql-training.cyssd3csgnm6.us-east-1.rds.amazonaws.com;initial catalog=MonsterDB;persist security info=True;user id=ray;password=Grape2014!;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
 </configuration>
